[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miskit"
version = "0.0.1"
description = "A small, extensible AI agent."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
miskit = "miskit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
