[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miskit-codex"
version = "0.0.1"
description = "Codex provider plugin for miskit."
requires-python = ">=3.11"
dependencies = ["miskit"]

[project.entry-points."miskit.providers"]
codex = "miskit_codex"

[tool.setuptools.packages.find]
where = ["src"]
