[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miskit-execute"
version = "0.0.1"
description = "Execute programs (no shell interpolation) as a miskit tool."
requires-python = ">=3.11"
dependencies = ["miskit"]

[project.entry-points."miskit.tools"]
execute = "miskit_execute"

[tool.setuptools.packages.find]
where = ["src"]
