[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miskit-imessage"
version = "0.0.1"
description = "iMessage channel plugin for miskit."
requires-python = ">=3.11"
dependencies = ["miskit"]

[project.entry-points."miskit.channels"]
imessage = "miskit_imessage"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
miskit_imessage = ["*.applescript"]
