[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miskit-telegram"
version = "0.0.1"
description = "Telegram channel plugin for miskit."
requires-python = ">=3.11"
dependencies = ["miskit"]

[project.entry-points."miskit.channels"]
telegram = "miskit_telegram"

[tool.setuptools.packages.find]
where = ["src"]
