[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miskit-web-search"
version = "0.0.1"
description = "DuckDuckGo web search tool plugin for miskit."
requires-python = ">=3.11"
dependencies = ["miskit"]

[project.entry-points."miskit.tools"]
web_search = "miskit_web_search"

[tool.setuptools.packages.find]
where = ["src"]
